--- a/jailson/assets/sobremim.html
+++ b/jailson/assets/sobremim.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="landingpage,landing,page">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/config.js"></script>
+    <link rel="stylesheet" href="css/sobre.css">
+    <script src="js/config.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
@@ -13,25 +13,25 @@
     <meta name="description" content="Curriculo em página">
     <meta name="author" content="Natalia-Costa-Moura">
     <meta name="robots" content="">
-    <link rel="shortcut icon" href="assets/img/icons8-feliz-30.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icons8-feliz-30.png" type="image/x-icon">
     <title>Bem-vindo! | Natalia's Place</title>
 </head>
 <body>
     <header>
         <div class="titulo">
-            <img class="imagem02" src="assets/img/images.png" alt="">
+            <img class="imagem02" src="img/images.png" alt="">
             <h1>Bem-vindo! | Natália's <span class="span-1">Place</span></h1>
         </div>
         <nav>
             <a href="">Página Inicial</a>
-            <a href="assets/contato.html">Sobre mim</a>
+            <a href="sobremim.html">Sobre mim</a>
             <a href="">Galeria</a>
-            <a href="assets/contato.html">Contato</a>
+            <a href="contato.html">Contato</a>
         </nav>
     </header>
     
     <div class="EUTOLOCA">
-        <img class="imagem01" src="assets/img/3bf21b4926c1bae9b0448297e06d9fdf-folhas-de-flores-e-borboletas.webp" alt="Imagem Descritiva">
+        <img class="imagem01" src="img/3bf21b4926c1bae9b0448297e06d9fdf-folhas-de-flores-e-borboletas.webp" alt="Imagem Descritiva">
         
         <div>
           <h2 class="sobre-super">Sobre mim</h2>
